--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,13 @@
     background-color: black;
     color: orange;
     font-family: Aptos, Verdana, sans-serif;
-    font-size: normal;
+    font-size: 1em;
 }
 
 .ul {
     background-color: black;
     font-family: Aptos, Verdana, sans-serif;
-    font-size: normal;
+    font-size: 1em;
 }
 
 .main {
@@ -32,7 +32,7 @@
     font-family: Aptos, Verdana, sans-serif;
     color: orange;
     font-weight: normal;
-    font-size: normal;
+    font-size: 1em;
 }
 
 .pre {
