--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@
     font-family: Aptos, Verdana, sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, figcaption {
     font-family: Aptos, Verdana, sans-serif;
     font-weight: bold;
     color: #ffaa87;
