--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@
     font-family: Aptos, Verdana, sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6, figcaption {
+h1, h2, h3, h4, h5, h6 {
     font-family: Aptos, Verdana, sans-serif;
     font-weight: bold;
     color: #ffaa87;
@@ -52,9 +52,21 @@ p {
     color: #ffaa87;
 }
 
+img {
+    width: 256px;
+    height: 169px;
+}
+
+figcaption {
+    font-family: Aptos, Verdana, sans-serif;
+    font-size: 0.75em;
+    font-style: italic;
+    color: #ffaa87;
+}
+
 /*unvisited link*/
 a:link {
-    color: #ffff00;
+    color: #ffff00; 
 }
 
 /*visited link*/
