--- a/css/layout.css
+++ b/css/layout.css
@@ -21,6 +21,10 @@
 
 .nav {
     padding: 10px;
+    position: sticky;
+    position: -webkit-sticky;
+    position: -moz-sticky;
+    top: 90px;
 }
 
 .aside {
@@ -28,7 +32,7 @@
     position: sticky;
     position: -webkit-sticky;
     position: -moz-sticky;
-    top: 0;
+    top: 90px;
 }
 
 .main {
