--- a/css/layout.css
+++ b/css/layout.css
@@ -6,6 +6,38 @@
     top: 0;
 }
 
+.header2 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+}
+
+
+
+.header-faq {
+    padding: 50px;
+    position: sticky;
+
+}
+
+.header-contact-us {
+    padding: 5px;
+    position: sticky;
+    position: -webkit-sticky;
+    position: -moz-sticky;
+    top: 0;
+}
+
+.header-success {
+    padding: 5px;
+    position: sticky;
+    position: -webkit-sticky;
+    position: -moz-sticky;
+    top: 0;
+}
+
 .logo {
     position: absolute;
     left: 10px;
@@ -15,8 +47,13 @@
 }
 
 .logo2 {
-    max-width: 75px;
-    max-height: 75px;
+    position: absolute;
+    top: 0;
+    left: 10px;        
+    z-index: 5;
+    width: auto;
+    max-width: 10vw;
+    height: 80px;
 }
 
 .nav {
