--- a/css/style.css
+++ b/css/style.css
@@ -1,49 +1,37 @@
 .body {
     background-color: black;
-}
+}/*this attribute is working for all site pages*/
 
-.header2 {
+.header {
     background-color: blue;
     text-align: center;
-}
-
-.header-faq {
-    background-color: blue;
-    text-align: center;
-}
-
+}/*backgorund and color and text align working well for index.html*/
 
 .nav {
     background-color: black;
     font-family: Aptos, Verdana, sans-serif;
     color: #ffaa87;
     font-size: 1em;
-}
+}/*all of these attributes are working for all site pages*/
 
 .ul {
     background-color: black;
     font-family: Aptos, Verdana, sans-serif;
     font-size: 1em;
-}
+}/*all of these attributes are working for all site pages*/
 
 .main {
     background-color: black;
     color: #ffaa87;
 }/*Main is parent. Section is child of main. P is child of section. So section and p elements should inherit properties of main.*/
 
-.form {
-   width: 65%;
-   margin: auto; /*This automatically centers the form*/
-}
-
 legend {
     font-family: Aptos, Verdana, sans-serif;
-}
+}/*this attribute is working for contact-us.html - it is only needed on this one site page*/
 
 .submit {
     background-color:#ffff00;
-    border-radius: 12px;
-    padding: 10px 50px;/*first parameter is top/bottom, second is left/right*/
+
     font-family: Aptos, Verdana, sans-serif;
     font-size: 1em;
     font-weight: bold;
@@ -58,6 +46,8 @@ legend {
 
 .success {
     text-align: center;
+    width: 100vw;
+    margin-top: 12%;
 }
 
 .footer {
@@ -78,9 +68,7 @@ legend {
     font-size: 1em;
     font-style: italic;
     margin: 0;
-
 }
-
 
 h1, h2, h3, h4, h5, h6 {
     font-family: Aptos, Verdana, sans-serif;
@@ -118,5 +106,12 @@ a:visited {
 
 /*mouse over link*/
 a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Add a color to the active/current link */
+a:active {
+    background-color: #04aa6d;
     color: white;
 }
