Incorporated the rest of Herd's code into the navigation bar. Changed header from position: sticky to position: relative.

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,5 +1,5 @@
 .header {
-    position: fixed;
+    position: relative;
     padding: 5px;
     top: 0;
     left: 0;
@@ -11,22 +11,26 @@
 .logo {
     position: absolute;
     top: 0;
-    left: 10px;        
+    left: 5px;        
     z-index: 2;
     width: auto;
     max-width: 10vw;
     height: 80px;
-    clear: both;
+
 }/*absolute working well for index.html*/
 
 .nav {
-    padding: 10px;
     position: sticky;
     -webkit-position: sticky;
     -moz-position: sticky;
     top: 90px;
-    clear: both;
+
 }/*sticky is working for index.html ONLY - it is not working on all subsequent site pages*/
+
+.nav a {
+    float: left;
+    padding: 14px 16px;
+}
 
 .aside {
     float: right;
