--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,27 @@
 }/*backgorund and color and text align working well for index.html*/
 
 .nav {
-    background-color: black;
+    background-color: #333;
     font-family: Aptos, Verdana, sans-serif;
-    color: #ffaa87;
-    font-size: 1em;
+    text-align: center;
 }/*all of these attributes are working for all site pages*/
+
+.nav a {
+    color: #f2f2f2;
+    text-align: center;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.nav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.nav a.active {
+    background-color: #04aa6d;
+    color: white;
+}
 
 .ul {
     background-color: black;
