--- a/css/style.css
+++ b/css/style.css
@@ -5,30 +5,31 @@
 .header {
     background-color: blue;
     text-align: center;
-}/*backgorund and color and text align working well for index.html*/
+}/*backgorund and color and text align working on all site pages*/
 
 .nav {
     background-color: #333;
     font-family: Aptos, Verdana, sans-serif;
     text-align: center;
-}/*all of these attributes are working for all site pages*/
+}/*all of these attributes are working for all site pages. Instructor's code adds a black background color to the top navigation */
+
 
 .nav a {
     color: #f2f2f2;
     text-align: center;
     text-decoration: none;
     font-size: 17px;
-}
+}/*Instructor's code styles the links inside the navigation bar */
 
 .nav a:hover {
     background-color: #ddd;
     color: black;
-}
+}/* Instructor's code changes the color of links on hover */
 
 .nav a.active {
     background-color: #04aa6d;
     color: white;
-}
+}/* Instructor's code adds a color to the active/current link */
 
 .ul {
     background-color: black;
