Changed .nav a.active  { background-color: } to #006400 (dark green) due to contrast error in Web Accessibility checker.

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@
 }/* Instructor's code changes the color of links on hover */
 
 .nav a.active {
-    background-color: #04aa6d;
+    background-color: darkgreen;
     color: white;
 }/* Instructor's code adds a color to the active/current link */
 
