--- a/css/layout.css
+++ b/css/layout.css
@@ -1,3 +1,9 @@
+.body-team {
+    background-color: black;
+    min-height: 100vh;
+    font-family: Aptos, Verdana, sans-serif;
+}/* This forces the body to have a bottom to it, not a perpetual one */
+
 .header {
     position: relative;
     padding: 5px;
@@ -7,6 +13,16 @@
     height: auto;
     clear: both;
 }/*fixed working well on all site pages*/
+
+.header-team {
+    background-color: blue;
+    position: relative;
+    padding: 5px;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: auto;
+}
 
 .logo {
     position: absolute;
@@ -30,6 +46,21 @@
     padding: 14px 16px;
 }
 
+.flex-p-nav {
+
+    flex-direction: column ;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-content: flex-start;
+    padding: 14px 16px;
+    margin-top: 0px;
+    max-width: 20vw;
+}
+
+.flex-c-nav {
+    padding: 14px 16px;
+}
+
 .aside {
     float: right;
     position: sticky;
@@ -38,9 +69,17 @@
 }/*float right and sticky are working on all site pages*/
 
 .main {
-    width: 80vw;
-    margin-top: 12%;
+    margin-top: 100px;
 }/*this attribute is working for all site pages*/
+
+.flex-p-main {
+    display: flex;
+    flex-direction: row;
+    /* row is default */
+    flex-wrap: nowrap;
+    max-width: 100vw;
+    margin-top: 20px;
+}
 
 .article {
     width: 800px;
@@ -51,6 +90,13 @@
     clear: both;
 }/*all of these layout attributes are working well for index.html - they are only needed on this one site page*/
 
+.flex-p-article {
+    display: flex;
+    flex-flow: row wrap;
+    /* justify-content: flex-start; */
+    /* align-content: flex-start; */ /* aligns all items as a group at desired location */
+}
+
 .figcaption {
     max-width: 275px;
 }/*this layout attribute is working well for index.html - they are only needed on this one site page*/
@@ -58,6 +104,42 @@
 .section {
     display: table;
 }/*this layout attribute is working well for index.html - they are only needed on this one site page*/
+
+.flex-section1 {
+        border: 5px dotted #0000ff;
+        padding: 15px;
+        text-align: center;
+
+}
+
+.flex-section2 {
+        border: 5px dotted #0000ff;
+        padding: 15px;
+        text-align: center;
+
+}
+
+.flex-section3 {
+        border: 5px dotted #0000ff;
+        padding: 15px;
+        text-align: center;
+
+}
+
+.flex-img1 {
+    max-width: 150px;
+    max-height: 169px;
+}
+
+.flex-img2 {
+    max-width: 147px;
+    max-height: 172px;
+}
+
+.flex-img3 {
+    max-width: 135px;
+    max-height: 172px;
+}
 
 .form {
     width: 65%;
@@ -114,4 +196,25 @@
 
 .reset {
     border-radius: 6px;
+}
+
+.sign-in-team {
+    border-radius: 12px;
+    padding: 10px 50px;
+    max-height: 70px;
+    margin: 20px 15px;
+}
+
+.flex-p-footer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: ;
+    flex-flow: ;
+    justify-content: ;
+    align-items: ;
+    align-content: ;   
+}
+
+.flex-c-footer {
+    align-self: ;
 }
