--- a/css/layout.css
+++ b/css/layout.css
@@ -54,7 +54,7 @@
     align-content: flex-start;
     padding: 14px 16px;
     margin-top: 0px;
-    max-width: 20vw;
+    max-width: 17vw;
 }
 
 .flex-c-nav {
@@ -78,7 +78,6 @@
     /* row is default */
     flex-wrap: nowrap;
     max-width: 100vw;
-    margin-top: 20px;
 }
 
 .article {
@@ -109,6 +108,8 @@
         border: 5px dotted #0000ff;
         padding: 15px;
         text-align: center;
+        max-width: 200px;
+        max-height: 725px;
 
 }
 
@@ -116,6 +117,8 @@
         border: 5px dotted #0000ff;
         padding: 15px;
         text-align: center;
+        max-width: 200px;
+        max-height: 775px;
 
 }
 
@@ -123,6 +126,8 @@
         border: 5px dotted #0000ff;
         padding: 15px;
         text-align: center;
+        max-width: 200px;
+        max-height: 900px;
 
 }
 
@@ -206,15 +211,13 @@
 }
 
 .flex-p-footer {
+    background-color: blue;
     display: flex;
     flex-direction: row;
-    flex-wrap: ;
-    flex-flow: ;
-    justify-content: ;
-    align-items: ;
-    align-content: ;   
+    flex-wrap: nowrap;
+    align-items: center;
 }
 
-.flex-c-footer {
-    align-self: ;
+.flex-footer1 {
+    order: -1;
 }
