--- a/css/layout.css
+++ b/css/layout.css
@@ -14,19 +14,9 @@
     clear: both;
 }/*fixed working well on all site pages*/
 
-.header-team {
-    background-color: blue;
-    position: relative;
-    padding: 5px;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: auto;
-}
-
 .logo {
     position: absolute;
-    top: 0;
+    top: 5px;
     left: 5px;        
     z-index: 2;
     width: auto;
@@ -34,6 +24,15 @@
     height: 80px;
 
 }/*absolute working well for index.html*/
+
+.logo-team {
+    top: 0;
+    left: 5px;
+    z-index: 2;
+    width: auto;
+    max-width: 10vw;
+    height: 80px;
+}
 
 .nav {
     position: sticky;
@@ -61,6 +60,15 @@
     padding: 14px 16px;
 }
 
+.flex-p-footer-nav {
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-content: flex-start;
+    margin-top: 0px;
+    max-width: 17vw;
+}
+
 .aside {
     float: right;
     position: sticky;
@@ -72,13 +80,6 @@
     margin-top: 100px;
 }/*this attribute is working for all site pages*/
 
-.flex-p-main {
-    display: flex;
-    flex-direction: row;
-    /* row is default */
-    flex-wrap: nowrap;
-    max-width: 100vw;
-}
 
 .article {
     width: 800px;
@@ -109,8 +110,7 @@
         padding: 15px;
         text-align: center;
         max-width: 200px;
-        max-height: 725px;
-
+        max-height: 600px;
 }
 
 .flex-section2 {
@@ -118,7 +118,7 @@
         padding: 15px;
         text-align: center;
         max-width: 200px;
-        max-height: 775px;
+        max-height: 600px;
 
 }
 
@@ -127,8 +127,7 @@
         padding: 15px;
         text-align: center;
         max-width: 200px;
-        max-height: 900px;
-
+        max-height: 600px;
 }
 
 .flex-img1 {
@@ -204,10 +203,12 @@
 }
 
 .sign-in-team {
+    display: flex;
     border-radius: 12px;
-    padding: 10px 50px;
+    padding: 25px 50px;
     max-height: 70px;
     margin: 20px 15px;
+
 }
 
 .flex-p-footer {
@@ -215,9 +216,14 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    align-items: center;
+    justify-content: space-around;
+    align-items: flex-start;
+    max-width: 100vh;
 }
 
-.flex-footer1 {
+
+
+.flex-footer2 {
     order: -1;
 }
+
