--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 }/*backgorund and color and text align working on all site pages*/
 
 .header-team {
+    background-color: blue;
     text-align: center;
 }
 
