--- a/css/layout.css
+++ b/css/layout.css
@@ -92,6 +92,12 @@
     margin-top: 100px;
 }/*this attribute is working for all site pages*/
 
+.flex-main {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+
+}
 
 .article {
     width: 800px;
@@ -116,10 +122,10 @@
     border: 5px dotted #0000ff;
     padding: 10px;
     text-align: center;
-    max-height: auto;
-    margin-left: auto;
-    margin-bottom: 10px;
-    flex: 0 2 50px;    
+    max-height: 50px;
+    margin-left: 40px;
+    justify-content: center;
+    flex: 1 3 200px;    
 }
 
 .figcaption {
@@ -136,7 +142,7 @@
     border: 5px dotted #0000ff;
     padding: 10px;
     text-align: center;
-    margin-top: 10px;
+    margin-top: 5px;
     margin-bottom: 10px;
     max-height: auto;/*if there is less content in child container than others, container will not be as tall as others*/
     flex-grow: 1;
@@ -148,10 +154,10 @@
     display: flex;
     flex-flow: column nowrap;
     border: 5px dotted #0000ff;
-    padding: 10px;
+    padding: 15px;
     text-align: center;
     max-height: auto;
-    margin-top: 10px;
+    margin-top: 15px;
     margin-bottom: 10px;
     flex: 0.5 1 200px;
     align-self: center;
@@ -164,7 +170,7 @@
     padding: 10px;
     text-align: center;
     max-height: auto;
-    margin-top: 10px;
+    margin-top: 20px;
     margin-bottom: 10px;
     flex: 0 1 200px;
     align-self: flex-end;
