--- a/css/layout.css
+++ b/css/layout.css
@@ -96,7 +96,6 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: flex-start;
-
 }
 
 .article {
@@ -125,7 +124,7 @@
     max-height: 50px;
     margin-left: 40px;
     justify-content: center;
-    flex: 1 3 200px;    
+    flex: 0 3 200px;    
 }
 
 .figcaption {
@@ -144,7 +143,7 @@
     text-align: center;
     margin-top: 5px;
     margin-bottom: 10px;
-    max-height: auto;/*if there is less content in child container than others, container will not be as tall as others*/
+    max-height: inherit;/*if there is less content in child container than others, container will not be as tall as others*/
     flex-grow: 1;
     flex-shrink: 1;
     flex-basis: 200px;/* sets minimum width of each of these child containers. */
@@ -156,7 +155,7 @@
     border: 5px dotted #0000ff;
     padding: 15px;
     text-align: center;
-    max-height: auto;
+    max-height: inherit;
     margin-top: 15px;
     margin-bottom: 10px;
     flex: 0.5 1 200px;
@@ -169,7 +168,7 @@
     border: 5px dotted #0000ff;
     padding: 10px;
     text-align: center;
-    max-height: auto;
+    max-height: inherit;
     margin-top: 20px;
     margin-bottom: 10px;
     flex: 0 1 200px;
