--- a/css/test.css
+++ b/css/test.css
@@ -9,7 +9,7 @@
   color: #ffaa87;
   display: grid;
   grid-gap: 10px;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 0.5fr 2fr;
   grid-template-rows: auto auto auto auto;
   min-height: 100vh;
  }
@@ -20,7 +20,7 @@
   display: grid;
   grid-row: 1 / 1; 
   grid-column: 1 / span 2;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 0.5fr 3fr;
   grid-template-rows: auto;
   grid-auto-flow: row;
 }
@@ -29,8 +29,14 @@
   max-width: 10vh;
 }
 
+.h1-grid {
+  justify-self: start;
+  margin-left: 0;
+}
+
 .nav-grid {
   background-color: blue;
+  padding-top: 10px;
   display: grid;
   grid-row: 2 / 2;
   grid-column: 1/ 1;
@@ -78,16 +84,26 @@
 
 .sec3 {
   grid-area: sec3;
+  border: 5px dotted blue;
+  padding: 10px;
+  margin-left: 10px;
+  margin-top: 20px;
   text-align: center;
 }
 
 .sec4 {
   grid-area: sec4;
+  border: 5px dotted blue;
+  padding: 10px;
+  margin: 20px;
   text-align: center;
 }
 
 .sec5 {
   grid-area: sec5;
+  border: 5px dotted blue;
+  padding: 10px;
+  margin-left: 10px;
   text-align: center;
 }
 
